--- a/css/index.css
+++ b/css/index.css
@@ -4,7 +4,8 @@ section{
     position:relative;
     display: flex;
     justify-content: space-between;
-    height:100vh;
+    height:90vh;
+    margin-top:10vh;
     padding: 13vw 8vw 8vw;
 }
 /* section 바탕 설정 값 */
@@ -173,7 +174,7 @@ section p{
 @media all and (max-width:479px) {
 
     section{
-        padding: 15vh 10vw 10vh;
+        padding: 5vh 10vw 10vh;
     }
     /* section 바탕 설정 값 */
     section h1{
