--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+html{
+    width:100vw;
+    height:100vh;
+    overflow: hidden;
+}
 section{
     display: flex;
     justify-content: center;
