--- a/css/index.css
+++ b/css/index.css
@@ -1,5 +1,10 @@
 @charset "utf-8";
 
+html{
+    width:100vw;
+    height:100vh;
+    overflow: hidden;
+}
 section{
     position:relative;
     display: flex;
@@ -173,9 +178,7 @@ section p{
 @media all and (max-width:479px) {
 
     section{
-        height:80vh;
-        margin-top:10vh;
-        padding: 5vh 8vw 0vh;
+        padding: 15vh 8vw 10vh;
     }
     /* section 바탕 설정 값 */
     section h1{
@@ -207,7 +210,7 @@ section p{
 
     .logo{
         position:absolute;
-        bottom:0vh;
+        bottom:10vh;
         left:10vw;
         display:flex;
         justify-content: space-between;
